syntax = "proto3";

package pb;

option go_package = "github.com/StephenButtolph/canoto/canoto/internal/generate/proto/pb";

message Scalars {
  int32 int8 = 1;
  int32 int16 = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint8 = 5;
  uint32 uint16 = 6;
  uint32 uint32 = 7;
  uint64 uint64 = 8;
  sint32 sint8 = 9;
  sint32 sint16 = 10;
  sint32 sint32 = 11;
  sint64 sint64 = 12;
  fixed32 fixed32 = 13;
  fixed64 fixed64 = 14;
  sfixed32 sfixed32 = 15;
  sfixed64 sfixed64 = 16;
  bool bool = 17;
  string string = 18;
  bytes bytes = 19;
  LargestFieldNumber largest_field_number = 20;

  repeated int32 repeated_int8 = 21;
  repeated int32 repeated_int16 = 22;
  repeated int32 repeated_int32 = 23;
  repeated int64 repeated_int64 = 24;
  repeated uint32 repeated_uint8 = 25;
  repeated uint32 repeated_uint16 = 26;
  repeated uint32 repeated_uint32 = 27;
  repeated uint64 repeated_uint64 = 28;
  repeated sint32 repeated_sint8 = 29;
  repeated sint32 repeated_sint16 = 30;
  repeated sint32 repeated_sint32 = 31;
  repeated sint64 repeated_sint64 = 32;
  repeated fixed32 repeated_fixed32 = 33;
  repeated fixed64 repeated_fixed64 = 34;
  repeated sfixed32 repeated_sfixed32 = 35;
  repeated sfixed64 repeated_sfixed64 = 36;
  repeated bool repeated_bool = 37;
  repeated string repeated_string = 38;
  repeated bytes repeated_bytes = 39;
  repeated LargestFieldNumber repeated_largest_field_number = 40;
}

message LargestFieldNumber {
  int32 int32 = 536870911;
}
